--- a/config.env
+++ b/config.env
@@ -2,3 +2,6 @@ NODE_ENV=development
 PORT=3008
 DATABASE_PASSWORD=root
 DATABASE=mongodb+srv://root:root@cluster0.tzlkys6.mongodb.net/natour?retryWrites=true&w=majority
+
+JWT_SECRET=this_is_an_example_of_jsonwebtoken_secret
+JWT_EXPIRES_IN=90d
