--- a/config.env
+++ b/config.env
@@ -5,3 +5,8 @@ DATABASE=mongodb+srv://root:root@cluster0.tzlkys6.mongodb.net/natour?retryWrites
 
 JWT_SECRET=this_is_an_example_of_jsonwebtoken_secret
 JWT_EXPIRES_IN=90d
+
+EMAIL_USERNAME=9f5ca5831a1a62
+EMAIL_PASSWORD=3eb5e1fada6c22
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT=25
