Implemented the JWT cookie, implemented rate limiting

--- a/config.env
+++ b/config.env
@@ -5,6 +5,7 @@ DATABASE=mongodb+srv://root:root@cluster0.tzlkys6.mongodb.net/natour?retryWrites
 
 JWT_SECRET=this_is_an_example_of_jsonwebtoken_secret
 JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN=90
 
 EMAIL_USERNAME=9f5ca5831a1a62
 EMAIL_PASSWORD=3eb5e1fada6c22
